refactored with working /api/products
