# app/contexts/product/api/Product.java
@@ -7,12 +7,14 @@ public class Product {
             String sku,
             String imgUrl,
             String name,
-            String description) {
+            String description,
+            Price price) {
         this.id = id;
         this.sku = sku;
         this.imgUrl = imgUrl;
         this.name = name;
         this.description = description;
+        this.price = price;
     }
 
     private Integer id;
@@ -20,6 +22,7 @@ public class Product {
     private String imgUrl;
     private String name;
     private String description;
+    private Price price;
 
     public Integer getId() {
         return id;
@@ -32,5 +35,6 @@ public class Product {
     public String getDescription() {
         return description;
     }
+    public Price getPrice() { return price; }
 
 }
