# conf/swagger.yml
@@ -25,7 +25,7 @@ paths:
     get:
       tags:
       - ui
-      summary: return a list of all products
+      summary: Return a list of all products
       produces:
       - application/json
       responses:
@@ -65,6 +65,10 @@ definitions:
     - price
     properties:
       id:
+        type: number
+        format: long
+        example: 12
+      sku:
         type: string
         format: uuid
         example: d290f1ee-6c54-4b01-90e6-d701748f0851
@@ -78,9 +82,7 @@ definitions:
         type: string
         example: http://example.com/img/image.png
       price:
-        type: number
-        format: float
-        example: 12.99
+        $ref: '#/definitions/OrderedItem'
   Order:
     type: object
     required:
@@ -139,3 +141,17 @@ definitions:
         type: number
         format: integer
         example: 1
+  Price:
+    type: object
+    required:
+    - dollars
+    - cents
+    properties:
+      dollars:
+        type: number
+        format: integer
+        example: 15
+      cents:
+        type: number
+        format: integer
+        example: 99
